# battle-sim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bots.java.Dockerfile  bots.java.Dockerfile.dockerignore  bots.python.Dockerfile  bots.python.Dockerfile.dockerignore  docker-compose.bots.yml  docker-compose.yml  projectplan.md  security-finding.md  system-design.md
backup/: match_main_1778695411.jsonl  match_main_1779372989.jsonl  match_main_1780044856.jsonl  match_main_1780045258.jsonl  mc_000000006a19548d_match_0002_seed_bdd732262feb6e95.jsonl  (+1 more)
sdk-python/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
sdk-python/naval_sdk/: __init__.py  bot.py  helpers.py  protocol.py
sdk-python/naval_sdk/tactical/: __init__.py  bot.py  context.py  evader.py  gunner.py  helm.py  intent.py  sensor.py  tracker.py
sdk-python/tests/: test_helpers.py  test_multiround.py  test_protocol.py  test_tactical_bot_integration.py  test_tactical_evader.py  test_tactical_gunner.py  test_tactical_helm.py  test_tactical_sensor.py  test_tactical_tracker.py
server/: Cargo.toml  Dockerfile
server/replays/: match_main_1778598859.jsonl  match_main_1778599091.jsonl
server/src/: admin.rs  auth.rs  config.rs  control.rs  lib.rs  main.rs  monte_carlo.rs  net.rs  protocol.rs  replay.rs  room.rs
server/src/sim/: combat.rs  config.rs  constants.rs  mod.rs  physics.rs  powerups.rs  sensors.rs  world.rs
server/tests/: admin_auth.rs  handshake.rs  monte_carlo_determinism.rs  protocol_validation.rs  replay_determinism.rs  tick_command.rs  tick_loop.rs  two_bot_match.rs
(+143 files in other folders)
