[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "naval-sdk"
version = "0.2.0"
description = "Python SDK for the naval battle simulator hackathon game"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "battle-sim contributors" }]
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["naval_sdk*"]
