[package]
name = "naval-server"
version = "0.1.0"
edition = "2021"
description = "Authoritative server for the naval battle programming game"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"
rand = "0.8"
rand_pcg = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
jsonwebtoken = "9"

[profile.release]
opt-level = 3
lto = "thin"
